--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
